# TFC

./: .gitignore  README.md  TODO.md  pyproject.toml
.omc/: project-memory.json
.omc/plans/: unified-datastore.md
.omc/sessions/: 4c80c4af-8b62-4268-8efa-a4e98946f716.json  e0480c18-972e-4c8d-afc3-218156beda4b.json
.omc/state/: agent-replay-4c80c4af-8b62-4268-8efa-a4e98946f716.jsonl  agent-replay-e0480c18-972e-4c8d-afc3-218156beda4b.jsonl
.omc/state/checkpoints/: checkpoint-2026-02-14T21-10-43-553Z.json  checkpoint-2026-02-15T02-36-19-068Z.json  checkpoint-2026-02-15T05-08-17-669Z.json  checkpoint-2026-02-15T18-00-46-544Z.json  checkpoint-2026-02-16T01-43-33-633Z.json
config/: tfcs-tui.toml
docs/: dashboard-mock-v1.txt  heatmap-extensions.md  heatmap.py  log-replay-animation.md  traffic-enhancements.md
src/tfcs_tui/: __init__.py  __main__.py  app.py  data.py  mock.py  widgets.py
